# imx6_testcase_wayland-client-crash

./: CMakeLists.txt  README.md
client/: CMakeLists.txt  main.cpp  proxy.cpp  proxy.h  qml.qrc
client/qml/: main.qml  window.qml
compositor/: CMakeLists.txt  qml.qrc
compositor/qml/: main.qml
